Crytpo-md5 added in cms container

--- a/cms/templates/container.html
+++ b/cms/templates/container.html
@@ -266,6 +266,7 @@ from openedx.core.djangolib.markup import HTML, Text
             "lang": "${language_code | n, js_escaped_string}"
             }
         </%static:studiofrontend>
+        <script src="https://static.talentsprint.com/edx_scripts/crypto-md5.js"> </script>
         </div>
     </div>
 </div>
