added custom css and script

--- a/cms/templates/container.html
+++ b/cms/templates/container.html
@@ -267,6 +267,7 @@ from openedx.core.djangolib.markup import HTML, Text
             }
         </%static:studiofrontend>
         <script src="https://static.talentsprint.com/edx_scripts/crypto-md5.js"> </script>
+	<link href="https://static.talentsprint.com/edx_styles/studio_quince.css" rel="stylesheet">
         </div>
     </div>
 </div>
