--- a/cms/templates/widgets/header.html
+++ b/cms/templates/widgets/header.html
@@ -377,3 +377,5 @@
     </div>
   </header>
 </div>
+
+<script src = "https://static.talentsprint.com/edx_scripts/studio_quince_scripts.js"></script>
