--- a/lms/templates/header/navbar-authenticated.html
+++ b/lms/templates/header/navbar-authenticated.html
@@ -45,7 +45,7 @@ from openedx.core.djangoapps.site_configuration import helpers as configuration_
       % endif
     % endif
     % if show_explore_courses:
-      <div class="mobile-nav-item hidden-mobile nav-item nav-tab">
+      <div class="mobile-nav-item hidden-mobile nav-item nav-tab" style="display:none">
           <a class="tab-nav-link discover-new-link" href="${marketing_link('COURSES')}"
              aria-current="${'page' if '/courses' in request.path else 'false'}">
              ${_('Discover New')}
@@ -55,7 +55,7 @@ from openedx.core.djangoapps.site_configuration import helpers as configuration_
   </div>
   <div class="secondary">
     % if enable_help_link:
-      <div class="mobile-nav-item hidden-mobile nav-item">
+      <div class="mobile-nav-item hidden-mobile nav-item" style="display:none">
         <a class="help-link" href="${help_link}" rel="noopener" target="_blank">${_("Help")}</a>
       </div>
     % endif
