feat: add welcome message to learner dashboard

--- a/lms/templates/learner_dashboard/_dashboard_navigation_courses.html
+++ b/lms/templates/learner_dashboard/_dashboard_navigation_courses.html
@@ -4,5 +4,10 @@ from django.utils.translation import gettext as _
 %>
 
 <header class="wrapper-header-courses">
+      <!-- start new content -->
+
+      Welcome to your dashboard!
+
+      <!-- end new content -->
   <h2 class="header-courses">${_("My Courses")}</h2>
 </header>
