Studio UI cleanup

--- a/cms/templates/container.html
+++ b/cms/templates/container.html
@@ -171,7 +171,7 @@ from openedx.core.djangolib.markup import HTML, Text
                             <span class="action-button-text">${_("View Live Version")}</span>
                         </a>
                     </li>
-                    <li class="action-item action-preview nav-item">
+                    <li class="action-item action-preview nav-item" style = "display:none">
                         <a href="${draft_preview_link}" class="button button-preview action-button" rel="external" title="${_('Preview the courseware in the LMS')}">
                             <span class="action-button-text">${_("Preview")}</span>
                         </a>
