--- a/cms/templates/index.html
+++ b/cms/templates/index.html
@@ -553,7 +553,7 @@ from openedx.core.djangolib.js_utils import (
       %endif
 
     </article>
-    <aside class="content-supplementary" role="complementary">
+    <aside class="content-supplementary" role="complementary" style = "display:none">
       <div class="bit">
         <h3 class="title title-3">${_('New to {studio_name}?').format(studio_name=settings.STUDIO_NAME)}</h3>
         <p>${_('Click Help in the upper-right corner to get more information about the {studio_name} page you are viewing. You can also use the links at the bottom of the page to access our continually updated documentation and other {studio_name} resources.').format(studio_name=settings.STUDIO_SHORT_NAME)}</p>
