--- a/cms/templates/container.html
+++ b/cms/templates/container.html
@@ -168,7 +168,7 @@ from openedx.core.djangolib.markup import HTML, Text
                 % if is_unit_page:
                     <li class="action-item action-view nav-item">
                         <a href="${published_preview_link}" class="button button-view action-button is-disabled" aria-disabled="true" rel="external" title="${_('Open the courseware in the LMS')}">
-                            <span class="action-button-text">${_("View Live Version")}</span>
+                            <span class="action-button-text">${_("Learner View")}</span>
                         </a>
                     </li>
                     <li class="action-item action-preview nav-item" style = "display:none">
