changed brand image

--- a/cms/templates/widgets/header.html
+++ b/cms/templates/widgets/header.html
@@ -18,7 +18,7 @@
       <h1 class="branding">
         % if not toggles.use_new_home_page():
         <a class="brand-link" href="/">
-          <img class="brand-image" src="https://cdn.exec.talentsprint.com/images/NSE-TS-Logo.png" alt="${settings.STUDIO_NAME}" />
+          <img class="brand-image" src="https://static.talentsprint.com/iitk-logo.png" alt="${settings.STUDIO_NAME}" />
             % if settings.LOGO_IMAGE_EXTRA_TEXT == 'edge':
             <span class="font-italic"> <span class="tilted">|</span> EDGE</span>
             % endif
@@ -26,7 +26,7 @@
         % endif
         % if toggles.use_new_home_page():
         <a class="brand-link" href="${get_studio_home_url()}">
-          <img class="brand-image" src="https://cdn.exec.talentsprint.com/images/NSE-TS-Logo.png" alt="${settings.STUDIO_NAME}" />
+          <img class="brand-image" src="https://static.talentsprint.com/iitk-logo.png" alt="${settings.STUDIO_NAME}" />
             % if settings.LOGO_IMAGE_EXTRA_TEXT == 'edge':
             <span class="font-italic"> <span class="tilted">|</span> EDGE</span>
             % endif
