Removed public enrollment, changed instructor styling, disabled debug staff info

--- a/lms/templates/instructor/instructor_dashboard_2/instructor_dashboard_2.html
+++ b/lms/templates/instructor/instructor_dashboard_2/instructor_dashboard_2.html
@@ -71,7 +71,7 @@ from openedx.core.djangolib.markup import HTML
 
   ##Scripts for Reports
 
-  <link rel="stylesheet" href="https://static.talentsprint.com/edx_styles/staging-instructor.css">
+  <link rel="stylesheet" href="https://static.talentsprint.com/edx_styles/instructor-quince.css">
   <link rel="stylesheet" href="https://cdn.datatables.net/1.10.23/css/jquery.dataTables.css">
   <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
   <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.23/js/jquery.dataTables.js"></script>
@@ -128,7 +128,7 @@ from openedx.core.djangolib.markup import HTML
           <h2 class="hd hd-2 instructor-dashboard-title">${_("Instructor Dashboard")}</h2>
           <div class="wrap-instructor-info studio-view">
             %if studio_url:
-            <a class="instructor-info-action" href="${studio_url}">${_("View Course in Studio")}</a>
+            <a class="instructor-info-action" href="${studio_url}">${_("Edit Course")}</a>
             %endif
           </div>
 
