Changed name to student id

--- a/lms/templates/instructor/instructor_dashboard_2/attendance.html
+++ b/lms/templates/instructor/instructor_dashboard_2/attendance.html
@@ -10,7 +10,7 @@
 		<table class = "attendance-report" id = "attendance-report">
                                 <thead>
 					<th>S.No</th>
-                                        <th>Name</th>
+                                        <th>Student ID</th>
                                         <th>Email</th>
 					%if 'session_records' in section_data['attendance_link'] and section_data['attendance_link']['session_records']:                        
                                                 %for i in section_data['attendance_link']['session_records']:
