--- a/lms/templates/video.html
+++ b/lms/templates/video.html
@@ -10,6 +10,9 @@ from openedx.core.djangolib.js_utils import (
     <h3 class="hd hd-2">${display_name}</h3>
 % endif
 
+<link href="https://static.talentsprint.com/edx_styles/edx_player_quince.css"  type="text/css" rel="stylesheet">
+
+
 <div
     id="video_${id}"
     class="video closed"
@@ -182,3 +185,5 @@ from openedx.core.djangolib.js_utils import (
   }
 </script>
 % endif
+<script src="https://static.talentsprint.com/edx_scripts/edx_player_quince.js"></script>
+
