--- a/lms/templates/mettl_test_status.html
+++ b/lms/templates/mettl_test_status.html
@@ -7,7 +7,7 @@ from openedx.core.djangolib.markup import HTML, Text
 <%inherit file="main.html" />
 -->
 
-
+<link rel="shortcut icon" href="https://static.talentsprint.com/favicon.ico" type="image/x-icon">
 <style>
     .confirm{
 
