--- a/lms/templates/instructor/instructor_dashboard_2/course_log.html
+++ b/lms/templates/instructor/instructor_dashboard_2/course_log.html
@@ -66,7 +66,7 @@
 							return data;
 					}}}],
 			'dom': 'Bfrtip',
-        	        'buttons': [{'extend': 'excel', 'text': 'Download', 'title': course_log_file_name}],
+        	        'buttons': [{'extend': 'excel', 'text': '<i class="fa fa-download" aria-hidden="true"></i>', 'title': course_log_file_name}],
 			'search' : false,
 			'pageLength' : 50,
 			'lengthChange': false,
