feat: added truncate and alert in notification

--- a/openedx/core/djangoapps/notifications/templates/notifications/digest_content.html
+++ b/openedx/core/djangoapps/notifications/templates/notifications/digest_content.html
@@ -33,7 +33,7 @@
                         </td>
                         <td class="notification-content" width="100%" align="left" valign="top" style=" padding: 1rem 1rem 1rem 0.5rem">
                             <p style="font-size: 0.875rem; font-weight:400; line-height:24px; color:#454545; margin: 0;">
-                                {{ notification.content | safe }}
+                                {{ notification.content | truncatechars_html:600 | safe }}
                             </p>
                             <p style="height: 0.5rem; margin: 0"></p>
                             <p style="color:#707070; margin: 0">
