feat: added unsubscribe url in digest header

--- a/openedx/core/djangoapps/notifications/templates/notifications/digest_footer.html
+++ b/openedx/core/djangoapps/notifications/templates/notifications/digest_footer.html
@@ -38,7 +38,7 @@
                         Notification Settings
                     </a>
                     <a href="{{unsubscribe_url}}" rel="noopener noreferrer" target="_blank" style="color: black; margin-left: 1rem">
-                        Unsubscribe
+                        Unsubscribe from email digest for learning activity
                     </a>
                 </p>
                 <p>
