--- a/openedx/core/djangoapps/notifications/templates/notifications/digest_header.html
+++ b/openedx/core/djangoapps/notifications/templates/notifications/digest_header.html
@@ -5,6 +5,13 @@
     style="background: #00262b; color: white; width: 100%; padding: 1.5rem"
 >
     <tbody>
+        <tr align="right">
+            <td>
+                <a href="{{unsubscribe_url}}" rel="noopener noreferrer" target="_blank" style="color: white; text-decoration: none; font-size: 12px; line-height: 10px">
+                    Unsubscribe
+                </a>
+            </td>
+        </tr>
         <tr align="center">
             <td>
                 <img src="{{ logo_url }}" style="width: 64px" height="auto" alt="logo_url" />
