chore: Converts builtin block Sass variables into CSS variables

--- a/xmodule/assets/word_cloud/_display.scss
+++ b/xmodule/assets/word_cloud/_display.scss
@@ -4,7 +4,7 @@
 @import 'lms/theme/variables-v1';
 
 .input-cloud {
-  margin: ($baseline/4);
+  margin: (var(--baseline)/4);
 }
 
 .result_cloud_section {
