--- a/xmodule/assets/lti/_lti.scss
+++ b/xmodule/assets/lti/_lti.scss
@@ -10,7 +10,7 @@ h2.problem-header {
 
 div.problem-progress {
   display: inline-block;
-  padding-left: ($baseline/4);
+  padding-left: (var(--baseline)/4);
   color: #666;
   font-weight: 100;
   font-size: em(16);
@@ -24,8 +24,8 @@ div.lti {
   .wrapper-lti-link {
     @include font-size(14);
 
-    background-color: $sidebar-color;
-    padding: $baseline;
+    background-color: var(--sidebar-color);
+    padding: var(--baseline);
 
     .lti-link {
       margin-bottom: 0;
@@ -58,8 +58,8 @@ div.lti {
   }
 
   div.problem-feedback {
-    margin-top: ($baseline/4);
-    margin-bottom: ($baseline/4);
+    margin-top: (var(--baseline)/4);
+    margin-bottom: (var(--baseline)/4);
 
   }
 }
