--- a/xmodule/assets/tabs/_codemirror.scss
+++ b/xmodule/assets/tabs/_codemirror.scss
@@ -9,7 +9,7 @@
     height: 379px;
     border: 1px solid #3c3c3c;
     border-top: 1px solid #8891a1;
-    background: $white;
+    background: var(--white);
     color: #3c3c3c;
   }
 
