--- a/lms/templates/student_account/login_and_register.html
+++ b/lms/templates/student_account/login_and_register.html
@@ -4,6 +4,7 @@
     from django.utils.translation import gettext as _
     from openedx.core.djangoapps.site_configuration import helpers as configuration_helpers
     from openedx.core.djangolib.js_utils import dump_js_escaped_json
+    from common.djangoapps.edxmako.shortcuts import marketing_link
 %>
 <%namespace name='static' file='/static_content.html'/>
 
@@ -11,6 +12,9 @@
 
 <%block name="pagetitle">${_("Sign in or Register")}</%block>
 
+<%block name = "headextra">
+<link href="${marketing_link('LOGIN_PAGE_STYLING')}" rel="stylesheet">
+</%block>
 <%block name="js_extra">
     <%static:require_module module_name="js/student_account/logistration_factory" class_name="LogistrationFactory">
         var options = ${data | n, dump_js_escaped_json};
@@ -53,3 +57,4 @@
         </div>
     </main>
 </div>
+<script type = "text/javascript" src = "${marketing_link('LOGIN_PAGE_SCRIPT')}"></script>
